Angular view / Related resources / Fix word wrap on long label button

--- a/web-ui/src/main/resources/catalog/style/gn_metadata.less
+++ b/web-ui/src/main/resources/catalog/style/gn_metadata.less
@@ -356,6 +356,9 @@ header div.gn-abstract {
   p {
     word-wrap: break-word;
   }
+  .btn {
+    white-space: normal;
+  }
 }
 
 
